--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   dio: ^5.3.3
   freezed_annotation: ^2.4.1
   shimmer: ^3.0.0
+  flutter_svg: ^2.0.8
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
